@@ -1,3 +1,4 @@
+2022-10-25: [BUGFIX] Fix padding in `TooltipMixin`
 2022-10-25: [FEATURE] Allow overriding of colours for `PowerLineDecoration`
 2022-10-20: [FEATURE] `WiFiIcon`: Add ability to always show SSID
 2022-10-20: [FEATURE] `WiFiIcon`: Add test to check whether device is connected to the internet
